--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    {% load user_filters %}
+    {% load my_tags %}
     <main class="main container">
         <div class="main__header">
             <h1 class="main__title">Регистрация</h1>
