--- a/recipes/templates/favorite_list.html
+++ b/recipes/templates/favorite_list.html
@@ -39,5 +39,5 @@
 <script type="text/javascript" src={% static "js/components/Header.js" %}></script>
 
 <script type="text/javascript" src={% static "js/api/Api.js" %}></script>
-<script type="text/javascript" src={% static "Js/indexAuth.js" %}></script>
+<script type="text/javascript" src={% static "js/indexAuth.js" %}></script>
 {% endblock %}
