--- a/recipes/templates/profile.html
+++ b/recipes/templates/profile.html
@@ -49,5 +49,5 @@
     <script type="text/javascript" src={% static "js/components/Header.js" %}></script>
 
     <script type="text/javascript" src={% static "js/api/Api.js" %}></script>
-    <script type="text/javascript" src={% static "Js/authorRecipe.js" %}></script>
+    <script type="text/javascript" src={% static "js/authorRecipe.js" %}></script>
 {% endblock %}
