--- a/recipes/templates/purchase_list.html
+++ b/recipes/templates/purchase_list.html
@@ -19,7 +19,7 @@
                     <li class="shopping-list__item" data-id={{ recipe.id }}>
                         <div class="recipe recipe_reverse">
                             <img src={{ recipe.photo.url }} alt="какой-то текст" class="recipe__image recipe__image_big">
-                            <h3 class="recipe__title">{{ recipe.name }}</h3>
+                            <h3 class="recipe__title">{{ recipe.title }}</h3>
                             <p class="recipe__text"><span class="icon-time"></span> {{ recipe.cooking_time }} мин.</p>
                         </div>
                         <button class="button shopping-list__button link">Удалить</button>
