--- a/recipes/templates/recipe.html
+++ b/recipes/templates/recipe.html
@@ -29,7 +29,7 @@
                 </div>
                 <ul class="single-card__items">
                     {% for tag in recipe.tags.all %}
-                        <li class="card__item"><span class="{% tagcolor tag=tag.name %}">{{ tag.value }}</span></li>
+                        <li class="card__item"><span class="{% tagcolor tag=tag.title %}">{{ tag.value }}</span></li>
                     {% endfor %}
                 </ul>
                 <div class="single-card__items single-card__items_column">
@@ -86,6 +86,11 @@
     <script type="text/javascript" src={% static "js/components/Header.js" %}></script>
 
     <script type="text/javascript" src={% static "js/api/Api.js" %}></script>
-    <script type="text/javascript" src={% static "js/singlePage.js" %}></script>
+    {% if user.is_authenticated %}
+        <script type="text/javascript" src={% static "js/singlePage.js" %}></script>
+    {% else %}
+        <script type="text/javascript" src={% static "js/singlePageNotAuth.js" %}></script>
+    {% endif%}
+
 {% endblock %}
 
