--- a/recipes/templates/recipe_item.html
+++ b/recipes/templates/recipe_item.html
@@ -4,10 +4,10 @@
         <div class="card" data-id={{ recipe.id }}>
             <a href="{% url 'recipe' recipe.author.username recipe.id %}" class="link" target="_blank"><img src={{ recipe.photo.url }} alt="Какой-то текст" class="card__image"></a>
             <div class="card__body">
-                <a class="card__title link" href="{% url 'recipe' recipe.author.username recipe.id %}" target="_blank">{{ recipe.name }}</a>
+                <a class="card__title link" href="{% url 'recipe' recipe.author.username recipe.id %}" target="_blank">{{ recipe.title }}</a>
                 <ul class="card__items">
                     {% for tag in recipe.tags.all %}
-                        <li class="card__item"><span class="{% tagcolor tag=tag.name %}">{{ tag.value }}</span></li>
+                        <li class="card__item"><span class="{% tagcolor tag=tag.title %}">{{ tag.value }}</span></li>
                     {% endfor %}
                 </ul>
                 <div class="card__items card__items_column">
