--- a/recipes/templates/recipe_create.html
+++ b/recipes/templates/recipe_create.html
@@ -67,7 +67,7 @@
                             {% endfor %}
                         </div>
                         <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                        <span class="form__error"></span>
+                        <span class="form__error">{{ form.non_field_errors }}</span>
                     </div>
                 </div>
 
