--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -20,6 +20,9 @@
                         <label for="{{ field.id_for_label }}" class="form__label">{{ field.label }}</label>
                         <div class="form__field-group">
                             {{ field | addclass:"form__input" }}
+                            {% if field.help_text %}
+                                <span id="{{ field.id_for_label }}-help">{{ field.help_text|safe }}</span>
+                            {% endif %}
                             <span class="form__error">{{ field.errors }}</span>
                         </div>
                     </div>
