correct error in button

--- a/templates/500.html
+++ b/templates/500.html
@@ -11,7 +11,7 @@
         <div class="custom-center-block">
                 <p class="custom-text-block">Ошибка 500. Внутренняя Ошибка Сервера</p>
             <div class="custom-button-block">
-                <button href="{% url 'index' %}" class="button button_style_blue">Перейти на главную</button>
+                <a href="{% url 'index' %}"><button  class="button button_style_blue" >Перейти на главную</button></a>
             </div>
         </div>
     </main>
