--- a/users/templates/registration/password_reset_confirm.html
+++ b/users/templates/registration/password_reset_confirm.html
@@ -41,7 +41,7 @@
             <div class="custom-center-block">
                     <p class="custom-text-block">Ссылка сброса пароля устарела.</p>
                 <div class="custom-button-block">
-                    <button href="{% url 'index' %}" class="button button_style_blue">Перейти на главную</button>
+                    <a href="{% url 'index' %}"><button  class="button button_style_blue" >Перейти на главную</button></a>
                 </div>
             </div>
         </main>
