--- a/users/templates/registration/password_reset_done.html
+++ b/users/templates/registration/password_reset_done.html
@@ -11,7 +11,7 @@
         <div class="custom-center-block">
                 <p class="custom-text-block">На вашу почту была отправленна ссылка для сброса пароля.</p>
             <div class="custom-button-block">
-                <button href="{% url 'index' %}" class="button button_style_blue">Перейти на главную</button>
+                <a href="{% url 'index' %}"><button  class="button button_style_blue" >Перейти на главную</button></a>
             </div>
         </div>
     </main>
